CHANGELOG

2.1.14
UTIL:

BUGFIX:

GENERAL:


2.1.13 (20230810)
UTIL:
* type=address | introduction of actions=upload-address-2cloudmanager:panorama.xml,DGname && actions=upload-addressgroup-2cloudmanager:panorama.xml,DGname
* type=address actions=upload-address-2cloudmanager | extend validation if object name is already available
* type=servicegroup-merger | introduce validation extension for childDG merger
* type=rule-compare | exend with argument 'keepJSONfile1' and 'reuseJSONfile1'
* type=rule-compare | introduce argument 'generateRuleHtmlFile'
* type=servicegroup-merger | extend with childancestor validation
* type=service actions=exporttoexcel:file.html | introduce additional arguments nestedmembers
* type=XYZ actions=exporttoexcel:file.html | use single function to create spreadsheet content
* type=dhcp | introduce actions=exporttoexcel:file.html
* type=dhcp | improvement for actions=exporttoexcel
* type=dhcp actions=display/exporttoexcel | extend with additional DHCP information
* type=rule 'actions=exporttoexcel:file.html,resovleservicesummary' | extend with column service_resolve_nested/_name/_value/_location
* type=service actions=exporttoexcel:file.html | correct predefined service-http/-https output
* type=address/server actions=exporttoexcel:file.html,nestedmembers | extend with column nested members location
* class Address - use $RuleReferenceLocation
* type=zone | introduce 'filter=(interface is.set)'

BUGFIX:
* class Region | bugfix - introduce method type() - to handle "type=address actions="
* type=address actions=move - bugifx/workaround - do not move region objects
* type=addressgroup-merger | bugfix to check childancestor objects availability
* type=addressgroup-merger | bugfix if multiple childDG has same objectgroup incl. value, but one differ; stop merging
* class AddressGroup  | bugfix for method expand() - to correctly extract all submembers and their value for type=rule 'actions=exporttoexcel:file.html,resolveaddresssummary'