@@ -4,6 +4,7 @@ CHANGELOG
 UTIL:
 
 BUGFIX:
+* type=vendor-migration | general bugfix to use correct baseconfig file if no argument in= is defined
 
 GENERAL:
 
